--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,14 @@ description: > # this means to ignore newlines until "baseurl:"
   このページはJekyllというサービスを利用しています。
 permalink: ':title/'
 baseurl: "/diary-1" # the subpath of your site, e.g. /blog
+cafeurl: "/cafe"
 url: "https://liqrase.github.io/cafe/" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Ligrase # add your name
 author-img: david-freeman.jpg # add your photo
-about-author: これはテストです。テストですよ。 # add description
+about-author: 作ったものを雑に載せる場所です。 # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github:  # add your Github handle
