--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ highlighter: rouge
 
 # Author Settings
 author: Ligrase # add your name
-author-img: ofuro_oke_wood # add your photo
+author-img: ofuro_oke_wood.png # add your photo
 about-author: 作ったものを雑に載せる場所です。 # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
