--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Program Practice
+title: Myプログラム雑記
 description: > # this means to ignore newlines until "baseurl:"
   プログラミング周りの私的なことを雑に載せる場所です。
 permalink: ':title/'
