--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ title: Myプログラム雑記
 description: > # this means to ignore newlines until "baseurl:"
   プログラミング周りの私的なことを雑に載せる場所です。
 permalink: ':title/'
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/diary-1" # the subpath of your site, e.g. /blog
 cafeurl: "/cafe"
-url: "https://liqrase.github.io/diary-1/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://liqrase.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # マークダウン
