--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Myプログラム雑記
 description: > # this means to ignore newlines until "baseurl:"
   プログラミング周りの私的なことを雑に載せる場所です。
-permalink: ':title/'
+permalink: '/:year/:month/:day/:title/'
 baseurl: "/diary-1" # the subpath of your site, e.g. /blog
 url: "https://liqrase.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
