--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,20 @@
-title: Myプログラム雑記
+title: Hello, world! I'm David Freeman
 description: > # this means to ignore newlines until "baseurl:"
-  プログラミング周りの私的なことを雑に載せる場所です。
-permalink: '/:year/:month/:day/:title/'
-baseurl: "/diary-1" # the subpath of your site, e.g. /blog
-url: "https://liqrase.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+permalink: ':title/'
+baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
-# マークダウン
-highlighter: rouge
-
 # Author Settings
-author: Ligrase # add your name
-author-img: ofuro_oke_wood.png # add your photo
-about-author: 作ったものを雑に載せる場所です。 # add description
+author: David Freeman # add your name
+author-img: david-freeman.jpg # add your photo
+about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github:  # add your Github handle
+social-github: artemsheludko # add your Github handle
 social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
@@ -31,7 +30,6 @@ plugins:
   - jekyll-sitemap
   - jekyll-paginate
   - jemoji
-
 
 paginate: 8
 paginate_path: "/page/:num"
