--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Myプログラム雑記
 description: > # this means to ignore newlines until "baseurl:"
   グラミング周りの私的なことを雑に載せる場所です。
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/diary-1" # the subpath of your site, e.g. /blog
+url: "https://liqrase.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
