--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Ligrase # add your name
-author-img: dofuro_oke_wood.png # add your photo
+author-img: ofuro_oke_wood.png # add your photo
 about-author: 作ったものを雑に載せる場所です。 # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
