--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ analytics: # Google Analytics
 # Build Settings
 future: true
 markdown: kramdown
+kramdown:
+  input: GFM
 plugins:
   - jekyll-sitemap
   - jekyll-paginate
