--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ discus-identifier: mr-brown # add your discus identifier
 analytics: # Google Analytics
 
 # Build Settings
-future: true
+# future: true
 markdown: kramdown
 plugins:
   - jekyll-sitemap
